--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h2>Hello World</h2>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+    <!--Navbar-->
+        <nav class = "navbar navbar-expand-sm bg-dark navbar-dark">
+          <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navcollapse">
+            <span class = "navbar-toggler-icon "></span>
+          </button>
+          <div class = "collapse navbar-collapse" id = "navcollapse">
+              <ul class = "navbar-nav">
+                  <li class = "nav-item">
+                    <a class = "nav-link" href = "#home">Home</a>
+                  </li>
+          </div>
+        </nav>
