add the headings to the navbar and create html pages for them

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
                   <li class = "nav-item">
                     <a class = "nav-link" href = "#home">Home</a>
                   </li>
+                  <li class = "nav-item">
+                    <a class = "nav-link" href = "#roles">Roles</a>
+                  </li>
+                  <li class = "nav-item">
+                    <a class = "nav-link" href = "#branches">Branches</a>
+                  </li>
+                  <li class = "nav-item">
+                    <a class = "nav-link" href = "#parts">Game Components</a>
+                  </li>
           </div>
         </nav>
