--- a/parts.html
+++ b/parts.html
@@ -22,16 +22,16 @@
           <div class = "collapse navbar-collapse" id = "navcollapse">
               <ul class = "navbar-nav">
                   <li class = "nav-item">
-                    <a class = "nav-link" href = "#home">Home</a>
+                    <a class = "nav-link" href = "index.html">Home</a>
                   </li>
                   <li class = "nav-item">
-                    <a class = "nav-link" href = "#roles">Roles</a>
+                    <a class = "nav-link" href = "roles.html">Roles</a>
                   </li>
                   <li class = "nav-item">
-                    <a class = "nav-link" href = "#branches">Branches</a>
+                    <a class = "nav-link" href = "branches.html">Branches</a>
                   </li>
                   <li class = "nav-item">
-                    <a class = "nav-link" href = "#parts">Game Components</a>
+                    <a class = "nav-link" href = "#">Game Components</a>
                   </li>
               </ul>
           </div>
