--- a/index.html
+++ b/index.html
@@ -43,4 +43,8 @@
          <img class = "img-fluid" src = "imgs/title-pic.jpg">
        </div>
        
-    
+    <!--What is?-->
+      <div class = "text-center mb-3 bg-light">
+        <h2>What is Game Design?</h2>
+        <p>There are many people who are confused with what this career is. Game Design is a career in which combines the aspects of different types of careers to produce a game as an end product. Some of the fields combined in this industry are creative writing, art, and computer programming. </p>
+      </div>
