explain why the career may be a good choice

--- a/index.html
+++ b/index.html
@@ -48,3 +48,9 @@
         <h2>What is Game Design?</h2>
         <p>There are many people who are confused with what this career is. Game Design is a career in which combines the aspects of different types of careers to produce a game as an end product. Some of the fields combined in this industry are creative writing, art, and computer programming. </p>
       </div>
+      
+    <!--Why this Career-->
+      <div class = "text-center mt-5 mb-3">
+        <h2>Why This Career May Be A Good Choice</h2>
+        <p>There are many positive things that come with a career in game design. Becoming a game designer allows you to use your creativity and analytical skills. In addition, the work work environment is casual while also providing a competitive salary. Finally some of the key factors are that the career path is steady and you get to help others have fun by providing entertainment.</p>
+      </div>
