explain how to start pursuing career

--- a/index.html
+++ b/index.html
@@ -54,3 +54,11 @@
         <h2>Why This Career May Be A Good Choice</h2>
         <p>There are many positive things that come with a career in game design. Becoming a game designer allows you to use your creativity and analytical skills. In addition, the work work environment is casual while also providing a competitive salary. Finally some of the key factors are that the career path is steady and you get to help others have fun by providing entertainment.</p>
       </div>
+      
+    <!--How can I learn to be in this career-->
+      <div class = "text-center mt-5 mb-3 bg-light">
+        <h2>How to Start?</h2>
+        <p>A good place to start trying to become a game desinger would be in school. It is important to get at least a Bachelor's Degree while majoring in computer science as it will increase the amount of opportunities that are given later on. Also, majoring in computer scinece will help you gain more marketable skills to present to companis when at an interview for a position in the industry. Some examples of top colleges to study computer science would be at University of Southern California and Rochester Institute of Technology.</p>
+        <img class = "float-left" src = "imgs/usc-logo.png">
+        <img class = "float-right" src = "imgs/rit-logo.png">
+      </div>
