add title of roles

--- a/roles.html
+++ b/roles.html
@@ -37,4 +37,7 @@
           </div>
         </nav>
         
-        
+    <!--Title-->
+      <div class = "text-center mt-3 mb-3">
+        <h2>Roles</h2>
+      </div>
