include examples of companies with pics in branches

--- a/branches.html
+++ b/branches.html
@@ -56,3 +56,10 @@
         </p>
         <img class = "img-fluid" src = "imgs/ranks.jpg">
       </div>
+      
+    <!--Companies-->
+      <div class = "text-center">
+        <p class = "text-center">Examples of big game companies include Blizzard and Activision.</p>
+          <img class = "img-fluid mr-3" src = "imgs/blizzard-logo.png">
+          <img class = "img-fluid ml-3" src = "imgs/nintendo-logo.jpg">
+      </div>
