--- a/parts.html
+++ b/parts.html
@@ -37,4 +37,7 @@
           </div>
         </nav>
         
-        
+    <!--Title-->
+      <div class = "text-center mt-3 mb-3">
+        <h2>Components of a Game</h2>
+      </div>
