add description and imgs to parts

--- a/parts.html
+++ b/parts.html
@@ -41,3 +41,17 @@
       <div class = "text-center mt-3 mb-3">
         <h2>Components of a Game</h2>
       </div>
+      
+    <!--Description-->
+      <div class = "text-center mb-5">
+        <p>When developing a game there are many parts of it that need to be taken care of. Those individual components of the game will be combined together in order to make an end product that will be able to be tested by other people in the company. Some parts of a game are:
+          <ul>
+            <li>Game world (the place where the game is set to be in)</li>
+            <li>Art (Visuals)</li>
+            <li>Sound (Audio)</li>
+          </ul>
+          This shows the art from the game Hollow Knight and the game world from Monster Hunter World.
+        </p>
+        <img class = "img-fluid mb-3" src = "imgs/hollow-knight.jpg">
+        <img class = "img-fluid mt-3" src = "imgs/game-world.jpg">
+      </div>
