add title to technology section in parts

--- a/parts.html
+++ b/parts.html
@@ -55,3 +55,8 @@
         <img class = "img-fluid mb-3" src = "imgs/hollow-knight.jpg">
         <img class = "img-fluid mt-3" src = "imgs/game-world.jpg">
       </div>
+      
+    <!--Technology Title-->
+      <div class = "text-center mt-3">
+        <h2>Technology Used</h2>
+      </div>
