add description and imgs to technology description in parts

--- a/parts.html
+++ b/parts.html
@@ -60,3 +60,10 @@
       <div class = "text-center mt-3">
         <h2>Technology Used</h2>
       </div>
+      
+    <!--Description-->
+      <div class = "text-center mt-3 mb-5 bg-light">
+        <p>Creating games not only requires the knowledge, but they also require certain tools so that they serve as foundations where the game can be built upon. Some of the tools that are used to build games include game engines and sound software. There are also some game design tools that contain a game engine and sound development such as Unity and Unreal Engine.</p>
+        <img class = "img-fluid mb-3" src = "imgs/unity-engine.png">
+        <img class = "img-fluid mt-3" src = "imgs/unreal-engine.png">
+      </div>
