put in source links in the description of about

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    
+
     <!--Navbar-->
         <nav class = "navbar navbar-expand-sm bg-dark navbar-dark">
           <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navcollapse">
@@ -39,3 +39,22 @@
               </ul>
           </div>
         </nav>
+
+    <!--Sources-->
+        <div class = "text-center mt-5 mb-3">
+            <h2>Sources</h2>
+            <p>
+               <ul>
+                   <li>https://www.oodlestechnologies.com/blogs/Different-Roles-In-Game-Development/</li>
+                   <li>http://www.nathanomicon.com/2018/03/so-you-want-to-be-video-game-designer_27.html</li>
+                   <li>https://www.hierarchystructure.com/video-game-company-hierarchy/</li>
+                   <li>https://www.gameindustrycareerguide.com/video-game-programmer-salary/</li>
+                   <li>https://study.com/articles/Game_Designer_Job_Info_and_Requirements_for_Becoming_a_Game_Designer.html</li>
+                   <li>https://www.theartcareerproject.com/blog/components-video-game-design/</li>
+                   <li>https://www.gamedesigning.org/learn/video-game-sound/</li>
+                   <li>https://itstillworks.com/video-game-designing-tools-6518.html</li>
+                   <li>https://www.allartschools.com/game-design/game-design-career-five-reasons/</li>
+                   <li>https://www.collegechoice.net/rankings/best-game-design-degrees/</li>
+               </ul>
+            </p>
+        </div>
