add github link to about me section

--- a/about.html
+++ b/about.html
@@ -58,3 +58,11 @@
                </ul>
             </p>
         </div>
+        
+        
+    <!--About Me-->
+        <div class = "text-center mt-5 mb-5">
+            <h2>About Me</h2>
+            <img class = "img-fluid" src = "imgs/github-logo.png">
+            <a href = "https://github.com/DavidZ1284">My Github</a>
+        </div>
