--- a/branches.html
+++ b/branches.html
@@ -33,6 +33,9 @@
                   <li class = "nav-item">
                     <a class = "nav-link" href = "parts.html">Game Components</a>
                   </li>
+                  <li class = "nav-item">
+                    <a class = "nav-link" href = "about.html">Sources/About Me</a>
+                  </li>
               </ul>
           </div>
         </nav>
