add container class to list in about

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </nav>
 
     <!--Sources-->
-        <div class = "text-center mt-5 mb-3">
+        <div class = "container-sm text-center mt-5 mb-3">
             <h2>Sources</h2>
             <p>
                <ul>
@@ -61,9 +61,9 @@
         
         
     <!--About Me-->
-        <div class = "text-center mt-5 mb-5">
+        <div class = "container text-center mt-5 mb-5">
             <h2>About Me</h2>
-            <img class = "img-fluid" src = "imgs/github-logo.png">
+            <img class = " w-50 h-50 img-fluid" src = "imgs/github-logo.png">
             <br>
             <a href = "https://github.com/DavidZ1284">My Github</a>
         </div>
