adjust container class in roles

--- a/roles.html
+++ b/roles.html
@@ -46,7 +46,7 @@
       </div>
       
     <!--Description-->
-        <div class = "container-sm mt-3 mb-3">
+        <div class = "container mt-3 mb-3">
           <p>In the game design career, it is common for people to work in big teams, so there are different roles for people to do their own job and contribute their results. Some of the roles/subroles in a team may include:
             <ul>
               <li>Designer (gameplay, rules, structure)</li>
@@ -70,7 +70,7 @@
         </div>
     
     <!--Salary-->
-        <div class = " container-sm mt-5 mb-3 bg-light">
+        <div class = " container mt-5 mb-3 bg-light">
           <h2 class = "text-center">Salary</h2>
           <p>Although the career provides a competetive salary, it can usually vary by individual. There are a few factors that can affect the amount of money that a game designer may earn. Some of those factors are:
             <ul>
