adjust container class in parts

--- a/parts.html
+++ b/parts.html
@@ -46,7 +46,7 @@
       </div>
       
     <!--Description-->
-      <div class = "container-sm mb-5">
+      <div class = "container mb-5">
         <p>When developing a game there are many parts of it that need to be taken care of. Those individual components of the game will be combined together in order to make an end product that will be able to be tested by other people in the company. Some parts of a game are:
           <ul>
             <li>Game world (the place where the game is set to be in)</li>
@@ -67,7 +67,7 @@
       </div>
       
     <!--Description-->
-      <div class = "container-sm text-center mt-3 mb-5">
+      <div class = "container text-center mt-3 mb-5">
         <p>Creating games not only requires the knowledge, but they also require certain tools so that they serve as foundations where the game can be built upon. Some of the tools that are used to build games include game engines and sound software. There are also some game design tools that contain a game engine and sound development such as Unity and Unreal Engine.</p>
         <img class = "img-fluid mb-3" src = "imgs/unity-engine.png">
         <img class = "img-fluid mt-3" src = "imgs/unreal-engine.png">
